swagger doc updated